objects/Hierarchy_Information__c.object
<CustomObject>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Hierarchy Information</relationshipLabel>
        <relationshipName>Hierarchy_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Hierarchy Information</relationshipLabel>
        <relationshipName>Hierarchy_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conflict__c</fullName>
        <label>Conflict</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Name__c</fullName>
        <label>Hierarchy Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Use_Structure__c</fullName>
        <label>In Use Structure</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Influence__c</fullName>
        <label>Influence</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Hierarchy Information</relationshipLabel>
        <relationshipName>Hierarchy_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Hierarchy Information</label>
    <nameField>
        <displayFormat>HR-{0000}</displayFormat>
        <label>Hierarchy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hierarchy Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>